--- a/html/global/head.html
+++ b/html/global/head.html
@@ -1,5 +1,5 @@
 <meta charset="UTF-8" />
-<title><!--#include virtual="../../misc/title.txt"--></title>
+<title><!--#include virtual="../../misc/title.txt"--> - <!--#echo var="TITLE" --></title>
 <meta http-equiv="Cache-control" content="public" />
 <meta property="og:title" content="<!--#include virtual="../../misc/title.txt"-->" />
 <meta property="og:description" content="<!--#include virtual="../../misc/description.txt"-->" />
@@ -18,7 +18,6 @@
 <meta name="twitter:image" content="" />
 <link rel="canonical" href="https://<!--#echo var="SERVER_NAME" -->" />
 <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<!--#exec cgi="../../misc/favicon.sh" -->" />
-<!-- <base href="https://<!--#echo var="SERVER_NAME" -->" /> -->
 <style><!--#include virtual="../../css/vars.css"--></style>
 <style><!--#include virtual="../../css/global.css"--></style>
 <style><!--#include virtual="../../css/responsive.css"--></style>
