--- a/html/pages/about.html
+++ b/html/pages/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<!--#set var="TITLE" value="About"-->
 		<!--#include virtual="../global/head.html"-->
 		<style>
 			#main_nav li:nth-child(5) a {
