--- a/html/pages/intro.html
+++ b/html/pages/intro.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<!--#set var="TITLE" value="Intro"-->
 		<!--#include virtual="../global/head.html"-->
 		<style>
 			#main_nav li:nth-child(1) a {
