--- a/html/pages/rants.html
+++ b/html/pages/rants.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<!--#set var="TITLE" value="Rants"-->
 		<!--#include virtual="../global/head.html"-->
 		<style>
 			#main_nav li:nth-child(3) a {
