Sitemap, auto desc, updated separate

--- a/html/global/head.html
+++ b/html/global/head.html
@@ -1,11 +1,11 @@
 <meta charset="UTF-8" />
-<title><!--#include virtual="../../misc/title.txt"--> - <!--#echo var="TITLE" --></title>
+<title><!--#include virtual="../../misc/title.txt"--> - <!--#echo var="TITLE"--></title>
 <meta http-equiv="Cache-control" content="public" />
 <meta property="og:title" content="<!--#include virtual="../../misc/title.txt"-->" />
 <meta property="og:description" content="<!--#include virtual="../../misc/description.txt"-->" />
 <meta property="og:image" content="" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<meta name="description" content="<!--#include virtual="../../misc/description.txt"-->" />
+<meta name="description" content="<!--#include virtual="../../misc/description.txt"--> - <!--#echo var="DESC"-->" />
 <meta name="keywords" content="" />
 <meta name="author" content="<!--#include virtual="../../misc/author.txt"-->" />
 <meta name="HandheldFriendly" content="true" />
