--- a/html/pages/about.html
+++ b/html/pages/about.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<!--#set var="TITLE" value="About"-->
+		<!--#set var="DESC" value="Info about the site"-->
 		<!--#include virtual="../global/head.html"-->
 		<style>
 			#main_nav li:nth-child(5) a {
