--- a/html/pages/contact.html
+++ b/html/pages/contact.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<!--#set var="TITLE" value="Contact"-->
+		<!--#set var="DESC" value="Contact info"-->
 		<!--#include virtual="../global/head.html"-->
 		<style>
 			#main_nav li:nth-child(6) a {
