--- a/html/pages/intro.html
+++ b/html/pages/intro.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<!--#set var="TITLE" value="Intro"-->
+		<!--#set var="DESC" value="What?"-->
 		<!--#include virtual="../global/head.html"-->
 		<style>
 			#main_nav li:nth-child(1) a {
