--- a/html/pages/links.html
+++ b/html/pages/links.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<!--#set var="TITLE" value="Links"-->
+		<!--#set var="DESC" value="Collection of relevant links"-->
 		<!--#include virtual="../global/head.html"-->
 		<style>
 			#main_nav li:nth-child(4) a {
