--- a/html/pages/rants.html
+++ b/html/pages/rants.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<!--#set var="TITLE" value="Rants"-->
+		<!--#set var="DESC" value="Good and bad examples of sites"-->
 		<!--#include virtual="../global/head.html"-->
 		<style>
 			#main_nav li:nth-child(3) a {
