--- a/html/pages/about.html
+++ b/html/pages/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<!--#set var="TITLE" value="About"-->
-		<!--#set var="DESC" value="Info about the site"-->
+		<!--#set var="DESC" value="Why?"-->
 		<!--#include virtual="../global/head.html"-->
 		<style>
 			#main_nav li:nth-child(5) a {
@@ -19,16 +19,22 @@
 		<!--#include virtual="../global/header.html"-->
 		<main>
 			<section>
-                Here I'll display info about the site
+				<section>
+					<article id="about">
+						<header>
+							<h2>
+								Why?
+							</h2>
+						</header>
+						<section>
+							<p>
+								Here I'll display some info about the site
+							</p>
+						</section>
+					</article>
+				</section>
 			</section>
 		</main>
-		<!-- <aside>
-			<h2>Related Links</h2>
-			<ul>
-				<li><a href="link1.html">Related Link 1</a></li>
-				<li><a href="link2.html">Related Link 2</a></li>
-			</ul>
-		</aside> -->
 		<!--#include virtual="../global/footer.html"-->
 	</body>
 </html>
