--- a/html/pages/rants.html
+++ b/html/pages/rants.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<!--#set var="TITLE" value="Rants"-->
-		<!--#set var="DESC" value="Good and bad examples of sites"-->
+		<!--#set var="DESC" value="Brace yourself"-->
 		<!--#include virtual="../global/head.html"-->
 		<style>
 			#main_nav li:nth-child(3) a {
@@ -19,16 +19,22 @@
 		<!--#include virtual="../global/header.html"-->
 		<main>
 			<section>
-                I'll rant on and on in several articles here
+				<section>
+					<article id="rants">
+						<header>
+							<h2>
+								Brace yourself
+							</h2>
+						</header>
+						<section>
+							<p>
+								I'll rant on and on in several articles here
+							</p>
+						</section>
+					</article>
+				</section>
 			</section>
 		</main>
-		<!-- <aside>
-			<h2>Related Links</h2>
-			<ul>
-				<li><a href="link1.html">Related Link 1</a></li>
-				<li><a href="link2.html">Related Link 2</a></li>
-			</ul>
-		</aside> -->
 		<!--#include virtual="../global/footer.html"-->
 	</body>
 </html>
