--- a/html/pages/sitelists.html
+++ b/html/pages/sitelists.html
@@ -63,9 +63,17 @@
 								Conclusions
 							</h3>
 							<p>
-								One thing I’ve noticed is that the more profit-driven a company / website is, the worse the website is. Highly ironic.<br>
-								Notice also that almost all websites deemed good works without JS.<br>
-								Descrepancy of higher "No JS" sizes may be because attempt to optimize loading using XHR / some JS framework.<br>
+								<ul>
+									<li>
+										The more profit-driven a company / website is, the worse the website is. Highly ironic.<br>
+									</li>
+									<li>
+										Almost all websites deemed good works without JS.<br>
+									</li>
+									<li>
+										Descrepancy of higher "No JS" sizes may be because attempt to optimize loading using XHR / some JS framework.<br>
+									</li>
+								</ul>
 							</p>
 						</section>
 						<section id="footnotes">
