Faster list gen, css stuff, trying to sync csv to cdn

--- a/html/pages/sitelists.html
+++ b/html/pages/sitelists.html
@@ -29,20 +29,21 @@
 						<section id="info">
 							<p>
 								All sites tested in Firefox version 133 with a clean profile, tracking protection and other privacy settings turned off.<br>
-								Quad9 DNS used, Swedish IP, no sites are signed in to, 10 seconds spent on site.<br>
-								Site force-reloaded 10 times, cache disabled. No functionality / services tested beyond landing page.<br>
-								Sizes in kB rounded to nearest whole number.<br>
+								Quad9 DNS used, Swedish IP, no sites signed in to, site force-reloaded 10 times after 10 seconds spent on site.<br>
+								Cache disabled, no functionality / services tested beyond landing page.<br>
+								Sizes are in transit (a.k.a compressed), sizes in kB rounded to nearest whole number.<br>
 								Results and testing as unbiased as technically possible; descriptions may not be :)
 							</p>
-							<a class="alink" href="#list_good">Good sites</a> ,
-							<a class="alink" href="#list_edgecases">Edgecases</a> ,
-							<a class="alink" href="#list_bad">Bad sites</a> ,
-							<a class="alink" href="#conclusions">Conclusions</a> ,
-							<a class="alink" href="#footnotes">Footnotes</a>
+							<a class="alink" href="#list_good">Good sites</a>,
+							<a class="alink" href="#list_edgecases">Edgecases</a>,
+							<a class="alink" href="#list_bad">Bad sites</a>,
+							<a class="alink" href="#conclusions">Conclusions</a>,
+							<a class="alink" href="#footnotes">Footnotes</a>,
+							<a class="alink" href="#contribute">Contribute</a>
 						</section>
 						<section class="list" id="list_good">
 							<h3>
-								Good sites
+								Good sites, <a class="alink" href="https://cdn.swiftsites.fyi/csv/sites_good.csv">Download CSV</a>
 							</h3>
 							<!--#include virtual="../../csv/sites_good.html"-->
 						</section>
@@ -99,6 +100,16 @@
 								¹⁰ That’s a lot of requests…<br>
 								¹¹ There’s no reason for a news site to do 895 requests and load 14.62 MB of data<br>
 								¹² There’s no reason for a news site to do 1459 (!!) requests and load 55.12 MB of data<br>
+							</p>
+						</section>
+						<section id="contribute">
+							<h3>
+								Contribute
+							</h3>
+							<p>
+								You can contribute to the list by <a class="alink" href="https://github.com/ittykeys/swiftsites.fyi/pulls">pull requests</a>.<br>
+								You can also <a class="alink" href="https://github.com/ittykeys/swiftsites.fyi/issues">report issues</a>.<br>
+								Source code is <a class="alink" href="https://github.com/swiftsites.fyi/sitelists">available on GitHub</a>.<br>
 							</p>
 						</section>
 					</article>
