--- a/html/pages/sitelists.html
+++ b/html/pages/sitelists.html
@@ -43,20 +43,23 @@
 						</section>
 						<section class="list" id="list_good">
 							<h3>
-								Good sites, <a class="alink" href="https://cdn.swiftsites.fyi/csv/sites_good.csv">Download CSV</a>
+								Good sites
 							</h3>
+							<a class="alink" href="https://cdn.swiftsites.fyi/csv/sites_good.csv">Download CSV</a><br>
 							<!--#include virtual="../../csv/sites_good.html"-->
 						</section>
 						<section class="list" id="list_edgecases">
 							<h3>
 								Edgecases
 							</h3>
+							<a class="alink" href="https://cdn.swiftsites.fyi/csv/sites_edgecases.csv">Download CSV</a><br>
 							<!--#include virtual="../../csv/sites_edgecases.html"-->
 						</section>
 						<section class="list" id="list_bad">
 							<h3>
 								Bad sites
 							</h3>
+							<a class="alink" href="https://cdn.swiftsites.fyi/csv/sites_bad.csv">Download CSV</a><br>
 							<!--#include virtual="../../csv/sites_bad.html"-->
 						</section>
 						<section id="conclusions">
