More SEO stuffs

--- a/html/global/head.html
+++ b/html/global/head.html
@@ -2,6 +2,8 @@
 <title><!--#include virtual="../../misc/title.txt"--> - <!--#echo var="TITLE"--></title>
 <meta http-equiv="Cache-control" content="public" />
 <meta property="og:title" content="<!--#include virtual="../../misc/title.txt"-->" />
+<meta property="og:url" content="https://<!--#echo var="SERVER_NAME" -->" />
+<meta property="og:type" content="website">
 <meta property="og:description" content="<!--#include virtual="../../misc/description.txt"-->" />
 <meta property="og:image" content="/img/logoo.png" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -11,8 +13,9 @@
 <meta name="HandheldFriendly" content="true" />
 <meta name="robots" content= "index, follow">
 <meta name="theme-color" content="#18171d">
-<meta name="twitter:card" content="" />
-<meta name="twitter:site" content="" />
+<meta name="twitter:card" content="summary_large_image">
+<meta property="twitter:domain" content="<!--#echo var="SERVER_NAME" -->">
+<meta property="twitter:url" content="https://<!--#echo var="SERVER_NAME" -->" />
 <meta name="twitter:title" content="<!--#include virtual="../../misc/title.txt"-->" />
 <meta name="twitter:description" content="<!--#include virtual="../../misc/description.txt"-->" />
 <meta name="twitter:image" content="/img/logoo.png" />
