Even more SEO stuffs

--- a/html/global/head.html
+++ b/html/global/head.html
@@ -1,14 +1,14 @@
 <meta charset="UTF-8" />
 <title><!--#include virtual="../../misc/title.txt"--> - <!--#echo var="TITLE"--></title>
 <meta http-equiv="Cache-control" content="public" />
-<meta property="og:title" content="<!--#include virtual="../../misc/title.txt"-->" />
+<meta property="og:title" content="<!--#include virtual="../../misc/title.txt"--> - <!--#echo var="TITLE"-->" />
 <meta property="og:url" content="https://<!--#echo var="SERVER_NAME" -->" />
 <meta property="og:type" content="website">
-<meta property="og:description" content="<!--#include virtual="../../misc/description.txt"-->" />
+<meta property="og:description" content="<!--#include virtual="../../misc/description.txt"--> - <!--#echo var="DESC"-->" />
 <meta property="og:image" content="/img/logoo.png" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <meta name="description" content="<!--#include virtual="../../misc/description.txt"--> - <!--#echo var="DESC"-->" />
-<meta name="keywords" content="" />
+<meta name="keywords" content="swiftsites.fyi, SwiftSites, <!--#include virtual="../../misc/keywords.txt" -->" />
 <meta name="author" content="<!--#include virtual="../../misc/author.txt"-->" />
 <meta name="HandheldFriendly" content="true" />
 <meta name="robots" content= "index, follow">
@@ -16,12 +16,13 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta property="twitter:domain" content="<!--#echo var="SERVER_NAME" -->">
 <meta property="twitter:url" content="https://<!--#echo var="SERVER_NAME" -->" />
-<meta name="twitter:title" content="<!--#include virtual="../../misc/title.txt"-->" />
-<meta name="twitter:description" content="<!--#include virtual="../../misc/description.txt"-->" />
+<meta name="twitter:title" content="<!--#include virtual="../../misc/title.txt"--> - <!--#echo var="TITLE"-->" />
+<meta name="twitter:description" content="<!--#include virtual="../../misc/description.txt"--> - <!--#echo var="DESC"-->" />
 <meta name="twitter:image" content="/img/logoo.png" />
 <link rel="canonical" href="https://<!--#echo var="SERVER_NAME" -->" />
 <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<!--#exec cgi="../../misc/favicon.sh" -->" />
 <link rel="apple-touch-icon" sizes="192x192" href="/img/logoo.png" />
+<link rel="manifest" href="json/manifest.json">
 <style><!--#include virtual="../../css/vars.css"--></style>
 <style><!--#include virtual="../../css/global.css"--></style>
 <style><!--#include virtual="../../css/responsive.css"--></style>
