More blabbing, disable counter for now

--- a/html/global/head.html
+++ b/html/global/head.html
@@ -5,7 +5,7 @@
 <meta property="og:url" content="https://<!--#echo var="SERVER_NAME" -->" />
 <meta property="og:type" content="website">
 <meta property="og:description" content="<!--#include virtual="../../misc/description.txt"--> - <!--#echo var="DESC"-->" />
-<meta property="og:image" content="/img/logoo.png" />
+<meta property="og:image" content="/img/logoo.svg" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <meta name="description" content="<!--#include virtual="../../misc/description.txt"--> - <!--#echo var="DESC"-->" />
 <meta name="keywords" content="swiftsites.fyi, SwiftSites, <!--#include virtual="../../misc/keywords.txt" -->" />
@@ -18,10 +18,10 @@
 <meta property="twitter:url" content="https://<!--#echo var="SERVER_NAME" -->" />
 <meta name="twitter:title" content="<!--#include virtual="../../misc/title.txt"--> - <!--#echo var="TITLE"-->" />
 <meta name="twitter:description" content="<!--#include virtual="../../misc/description.txt"--> - <!--#echo var="DESC"-->" />
-<meta name="twitter:image" content="/img/logoo.png" />
+<meta name="twitter:image" content="/img/logoo.svg" />
 <link rel="canonical" href="https://<!--#echo var="SERVER_NAME" -->" />
 <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<!--#exec cgi="../../misc/favicon.sh" -->" />
-<link rel="apple-touch-icon" sizes="192x192" href="/img/logoo.png" />
+<link rel="apple-touch-icon" sizes="192x192" href="/img/logoo.svg" />
 <link rel="manifest" href="json/manifest.json">
 <style><!--#include virtual="../../css/vars.css"--></style>
 <style><!--#include virtual="../../css/global.css"--></style>
