--- a/html/global/header.html
+++ b/html/global/header.html
@@ -18,4 +18,4 @@
         </ul>
     </nav>
 </header>
-<p id="visits">Site visits: <!--#include virtual="../../misc/visits.txt"--></p>
+<!--<p id="visits">Site visits: <!--#include virtual="https://sharkbite.swiftsites.fyi/visits"--></p>-->
