--- a/html/global/head.html
+++ b/html/global/head.html
@@ -1,5 +1,5 @@
 <meta charset="UTF-8" />
-<title><!--#include virtual="../../misc/title.txt"--> - <!--#echo var="TITLE"--></title>
+<title><!--#include virtual="../../misc/title.txt"--> - <!--#echo var="TITLE"--> - <!--#echo var="DESC"--></title>
 <meta http-equiv="Cache-control" content="public" />
 <meta property="og:title" content="<!--#include virtual="../../misc/title.txt"--> - <!--#echo var="TITLE"-->" />
 <meta property="og:url" content="https://<!--#echo var="SERVER_NAME" -->" />
