--- a/html/pages/sitelists.html
+++ b/html/pages/sitelists.html
@@ -41,6 +41,7 @@
 							<a class="alink" href="#footnotes">Footnotes</a>,
 							<a class="alink" href="#contribute">Contribute</a>
 						</section>
+						<hr>
 						<section class="list" id="list_good">
 							<h3>
 								Good sites
@@ -62,6 +63,7 @@
 							<a class="alink" href="https://cdn.swiftsites.fyi/csv/sites_bad.csv">Download CSV</a><br>
 							<!--#include virtual="../../csv/sites_bad.html"-->
 						</section>
+						<hr>
 						<section id="conclusions">
 							<h3>
 								Conclusions
@@ -112,7 +114,7 @@
 							<p>
 								You can contribute to the list by <a class="alink" href="https://github.com/ittykeys/swiftsites.fyi/pulls">pull requests</a>.<br>
 								You can also <a class="alink" href="https://github.com/ittykeys/swiftsites.fyi/issues">report issues</a>.<br>
-								Source code is <a class="alink" href="https://github.com/swiftsites.fyi/sitelists">available on GitHub</a>.<br>
+								Source code is <a class="alink" href="https://github.com/ittykeys/swiftsites.fyi/sitelists">available on GitHub</a>.<br>
 							</p>
 						</section>
 					</article>
