--- a/html/global/head.html
+++ b/html/global/head.html
@@ -19,7 +19,7 @@
 <meta name="twitter:title" content="<!--#include virtual="../../misc/title.txt"--> - <!--#echo var="TITLE"-->" />
 <meta name="twitter:description" content="<!--#include virtual="../../misc/description.txt"--> - <!--#echo var="DESC"-->" />
 <meta name="twitter:image" content="/img/logoo.svg" />
-<link rel="canonical" href="https://<!--#echo var="SERVER_NAME" -->" />
+<link rel="canonical" href="https://<!--#echo var="SERVER_NAME" -->/<!--#echo var="CANC"-->/" />
 <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<!--#exec cgi="../../misc/favicon.sh" -->" />
 <link rel="apple-touch-icon" sizes="192x192" href="/img/logoo.svg" />
 <link rel="manifest" href="json/manifest.json">
