--- a/html/pages/about.html
+++ b/html/pages/about.html
@@ -3,6 +3,7 @@
 	<head>
 		<!--#set var="TITLE" value="About"-->
 		<!--#set var="DESC" value="Why?"-->
+		<!--#set var="CANC" value="about"-->
 		<!--#include virtual="../global/head.html"-->
 		<style>
 			#main_nav li:nth-child(5) a {
