--- a/html/pages/contact.html
+++ b/html/pages/contact.html
@@ -3,6 +3,7 @@
 	<head>
 		<!--#set var="TITLE" value="Contact"-->
 		<!--#set var="DESC" value="Get in touch"-->
+		<!--#set var="CANC" value="contact"-->
 		<!--#include virtual="../global/head.html"-->
 		<style>
 			#main_nav li:nth-child(6) a {
