--- a/html/pages/intro.html
+++ b/html/pages/intro.html
@@ -3,6 +3,7 @@
 	<head>
 		<!--#set var="TITLE" value="Intro"-->
 		<!--#set var="DESC" value="What?"-->
+		<!--#set var="CANC" value="intro"-->
 		<!--#include virtual="../global/head.html"-->
 		<style>
 			#main_nav li:nth-child(1) a {
