--- a/html/pages/rants.html
+++ b/html/pages/rants.html
@@ -3,6 +3,7 @@
 	<head>
 		<!--#set var="TITLE" value="Rants"-->
 		<!--#set var="DESC" value="Brace yourself"-->
+		<!--#set var="CANC" value="rants"-->
 		<!--#include virtual="../global/head.html"-->
 		<style>
 			#main_nav li:nth-child(3) a {
