--- a/html/pages/sitelists.html
+++ b/html/pages/sitelists.html
@@ -3,6 +3,7 @@
 	<head>
 		<!--#set var="TITLE" value="Sitelists"-->
 		<!--#set var="DESC" value="Good and bad examples of sites"-->
+		<!--#set var="CANC" value="sitelists"-->
 		<!--#include virtual="../global/head.html"-->
 		<style>
 			#main_nav li:nth-child(2) a {
