--- a/html/pages/links.html
+++ b/html/pages/links.html
@@ -3,6 +3,7 @@
 	<head>
 		<!--#set var="TITLE" value="Links"-->
 		<!--#set var="DESC" value="Relevant links"-->
+		<!--#set var="CANC" value="links"-->
 		<!--#include virtual="../global/head.html"-->
 		<style>
 			#main_nav li:nth-child(4) a {
