--- a/html/pages/sitelists.html
+++ b/html/pages/sitelists.html
@@ -47,21 +47,21 @@
 							<h3>
 								Good sites
 							</h3>
-							<a class="alink" href="https://cdn.swiftsites.fyi/csv/sites_good.csv">Download CSV</a><br>
+							<a class="alink" href="https://cdn.swiftsites.fyi/csv/sites_good.csv" title='Download the CSV file for good site examples' aria-label='Download the CSV file for good site examples'>Download CSV</a><br>
 							<!--#include virtual="../../csv/sites_good.html"-->
 						</section>
 						<section class="list" id="list_edgecases">
 							<h3>
 								Edgecases
 							</h3>
-							<a class="alink" href="https://cdn.swiftsites.fyi/csv/sites_edgecases.csv">Download CSV</a><br>
+							<a class="alink" href="https://cdn.swiftsites.fyi/csv/sites_edgecases.csv"  title='Download the CSV file for edgecase site examples' aria-label='Download the CSV file for edgecase site examples'>Download CSV</a><br>
 							<!--#include virtual="../../csv/sites_edgecases.html"-->
 						</section>
 						<section class="list" id="list_bad">
 							<h3>
 								Bad sites
 							</h3>
-							<a class="alink" href="https://cdn.swiftsites.fyi/csv/sites_bad.csv">Download CSV</a><br>
+							<a class="alink" href="https://cdn.swiftsites.fyi/csv/sites_bad.csv"  title='Download the CSV file for bad site examples' aria-label='Download the CSV file for bad site examples'>Download CSV</a><br>
 							<!--#include virtual="../../csv/sites_bad.html"-->
 						</section>
 						<hr>
