--- a/html/global/head.html
+++ b/html/global/head.html
@@ -29,4 +29,5 @@
 <style><!--#include virtual="../../css/header.css"--></style>
 <style><!--#include virtual="../../css/main.css"--></style>
 <style><!--#include virtual="../../css/article.css"--></style>
+<style><!--#include virtual="../../css/sitemap.css"--></style>
 <style><!--#include virtual="../../css/footer.css"--></style>
