--- a/html/global/header.html
+++ b/html/global/header.html
@@ -18,4 +18,5 @@
         </ul>
     </nav>
 </header>
+<a id="sitemap" href="sitemap" title="Go to the sitemap" aria-label="Go to the sitemap">Sitemap</a>
 <!--<p id="visits">Site visits: <!--#include virtual="https://sharkbite.swiftsites.fyi/visits"--></p>-->
