--- a/html/pages/sitelists.html
+++ b/html/pages/sitelists.html
@@ -115,7 +115,7 @@
 							<p>
 								You can contribute to the list by <a class="alink" href="https://github.com/ittykeys/swiftsites.fyi/pulls">pull requests</a>.<br>
 								You can also <a class="alink" href="https://github.com/ittykeys/swiftsites.fyi/issues">report issues</a>.<br>
-								Source code is <a class="alink" href="https://github.com/ittykeys/swiftsites.fyi/sitelists">available on GitHub</a>.<br>
+								Source code is <a class="alink" href="https://github.com/ittykeys/swiftsites.fyi">available on GitHub</a>.<br>
 							</p>
 						</section>
 					</article>
