--- a/html/pages/sitelists.html
+++ b/html/pages/sitelists.html
@@ -34,6 +34,7 @@
 								Cache disabled, no functionality / services tested beyond landing page.<br>
 								Sizes are in transit (a.k.a compressed), sizes in kB rounded to nearest whole number.<br>
 								Results and testing as unbiased as technically possible; descriptions may not be :)
+								Sites tested picked from multiple sources of "Top 50 sites" etc, as well as personal choices.
 							</p>
 							<a class="alink" href="#list_good">Good sites</a>,
 							<a class="alink" href="#list_edgecases">Edgecases</a>,
