--- a/html/pages/sitelists.html
+++ b/html/pages/sitelists.html
@@ -33,7 +33,7 @@
 								Quad9 DNS used, Swedish IP, no sites signed in to, site force-reloaded 10 times after 10 seconds spent on site.<br>
 								Cache disabled, no functionality / services tested beyond landing page.<br>
 								Sizes are in transit (a.k.a compressed), sizes in kB rounded to nearest whole number.<br>
-								Results and testing as unbiased as technically possible; descriptions may not be :)
+								Results and testing as unbiased as technically possible; descriptions may not be :)<br>
 								Sites tested picked from multiple sources of "Top 50 sites" etc, as well as personal choices.
 							</p>
 							<a class="alink" href="#list_good">Good sites</a>,
