--- a/html/global/footer.html
+++ b/html/global/footer.html
@@ -1,7 +1,7 @@
 <footer id="main_footer">
     <p>
         <small>
-            © <!--#echo var="YEAR" -->
+            © 2024 - <!--#echo var="YEAR" -->
             <a href="https://github.com/ittykeys/" aria-label="IttyKeys on GitHub" title="IttyKeys on GitHub" target="_blank"><!--#include virtual="../../misc/author.txt"--></a>
             <a href="https://creativecommons.org/licenses/by/4.0/" aria-label="Link to Attribution 4.0 International on creativecommons.org" title="Link to Attribution 4.0 International on creativecommons.org" target="_blank" rel="noopener">(CC BY 4.0)</a>
             Site updated: <!--#include virtual="../../misc/last_updated.txt"-->
