--- a/html/pages/sitelists.html
+++ b/html/pages/sitelists.html
@@ -34,7 +34,8 @@
 								Cache disabled, no functionality / services tested beyond landing page.<br>
 								Sizes are in transit (a.k.a compressed), sizes in kB rounded to nearest whole number.<br>
 								Results and testing as unbiased as technically possible; descriptions may not be :)<br>
-								Sites tested picked from multiple sources of "Top 50 sites" etc, as well as personal choices.
+								Sites tested picked from multiple sources of "Top 50 sites" etc, as well as personal choices.<br>
+								This site? A single request for everything, 16 kB, no bloody JavaScript.
 							</p>
 							<a class="alink" href="#list_good">Good sites</a>,
 							<a class="alink" href="#list_edgecases">Edgecases</a>,
